--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -458,7 +458,6 @@
 		"Social_Media_Service": "Third-party Social Media Service",
 		"refers_any_website_any": "refers to any website or any social network website through which a user can log in or create an account to use the Service.",
 		"Facebook_Fan_Page": "Facebook Fan Page",
-		"public_profile_named": "is a public profile named Aimedis Facebook page specifically created by the Company on the Facebook social network, accessible from https://www.facebook.com/aimedisglobal",
 		"Personal_Data": "Personal Data",
 		"information_that_relates": "is any information that relates to an identified-or identifiable individual. For the purposes for GDPR, Personal Data means any information relating to you such as a name, an identification number, location data, online identifier or to one or more factors specific to the physical, physiological, genetic, mental, economic, cultural or social identity. For the purposes of the CCPA, Personal Data means any information that identifies, relates to, describes or is capable of being associated with, or could reasonably be linked, directly or indirectly, with you.",
 		"public_Cookies": "Cookies",
@@ -705,8 +704,108 @@
 		"Staff_addstaff": "+ add staff",
 		"want_to_register": "I want to register to the Aimedis health newsletter (optional).",
 		"I_agree_to_our": "By clicking the box I agree to our terms of use and accept the data collection, data processing and the use of my personal data. More in our privacy policy.",
-		"Staff_SENDREC": "SEND RECRUITMENT FORM"
+		"Staff_SENDREC": "SEND RECRUITMENT FORM",
 	
+
+		"profile":"Profile",
+		"information": "Information",
+		"profile_info": "This is your profile information, which is accessible to your trusted Doctors and those you share your Profile ID nad PIN with.",
+		"ID": "ID",
+		"pin":"PIN",
+		"done":"Done",
+		"QR_code": "QR code",
+		"Change" :"Change",
+		"edit_id_pin" :"You can change your ID and PIN as many times as you want.",
+		"edit": "Edit",
+		"and": "and",
+		"is" :"is",
+		"changed": "changed",
+		"profile_id_taken": "This Profile ID is already taken. Please try a different ID",
+		"profile_id_greater_then_5":"Profile id must be greater then 5 characters",
+		"save_change":"Save Changes",
+		"email": "Email address",
+		"title": "Title",
+		"degree": "Degree",
+		"first" :"First",
+		"last" :"Last",
+		"name" : "Name",
+		"dob" :"Date of birth",
+		"gender": "Gender",
+		"add" :"Address",
+		"street" :"Street",
+		"city" :"City",
+		"postal_code" :"Postal code",
+		"country" :"Country",
+		"home_telephone" :"Home telephone number",
+		"phone" :"phone",
+		"country_code" :"Country Code",
+		"mobile_number":"Mobile phone number",
+		"mobile":"mobile",
+		"Languages":"Languages",
+		"spoken":"spoken",
+		"insurance" :"Insurance",
+		"add_more":"Add more",
+		"company": "Compnay",
+		"of" : "of",
+		"info_copied" :"Information is Copied",
+		"profile_updated":"Profile is updated",
+		"profile_not_updated" :"Profile is not updated. Can not reach to server",
+		"mobile_number_not_valid" :"Mobile number is not valid",
+		"insurance_added":"Insuranse added Successfully.",
+		"number" :"number",
+		"Delete" :"Delete",
+		"password":"Password",
+		"supportive_text" : "Supportive text like this can be added if needed.",
+		"Current" :"Current",
+		"new_password" :"New password",
+		"confirm_password" :"Confirm new password",
+		"two_fac_auth" :"2-factor authentication",
+		"password_changed" :"Password is changed",
+		"new_and_confirm_pass_not_same":"New password and confirmed password is not same",
+		"current_pass_not_match":"Current password is not matching",
+		"plz_fill_fields":"Please fill the fields",
+		"we_use_authy":"We use Authy for you to be able to secure your account even more.",
+		"Disable":"Disable",
+		"Enable" : "Enable",
+		"family_doc" :"Family Doctor",
+		"visible_emergancy":"Visible on Emergency Data information. Has access to Journal.",
+		"doc_added_succefully":"Doctor is successFully added",
+		"select_family_doc":"Please select family doctor",
+		"make_sure_family_doc" :"Please make sure to add your Family Doctor",
+		"add_a_family_doc" :"Add a family doctor",
+		"trusted_doc":"Trusted Doctors",
+		"doc_have_access_ur_journal": "These Doctors have access to your Journal. You can add as many Trusted Doctors as you want.",
+		"doc_already_exit_in_list":"The Doctor is already exist in your list",
+		"doc_removed_trusted_list":"Doctor is removed from your Trusted list",
+		"remove":"Remove",
+		"add_trusted_doc":"Add a trusted doctor",
+		"select_doctor":"Please select the Doctor",
+		"New" :"New",
+		"find_doc":"Find a Doctor",
+		"serch_by_name_id":"Search by name or ID",
+		"add_to_trusted_doc" :"Add to Trusted Doctors",
+		"recmonded_doc":"Recommended Doctors",
+		"doc_who_part_of_aimedis":"Doctors who are part of the Aimedis platform.",
+		"free_text":"Free Text",
+		"format_updated":"The Format is updated",
+		"blockchain_secure_organ_donar_Pass":"Blockchain secured organ donor pass",
+		"easily_select_donar":"Here you can easily select to be an organ donor or not at anytime.",
+		"organ_transplant_declaration":"In case an organ / tissue of mine is considered to be transplanted after my death, I herewith declare: ",
+		"organ_tissue":"Organ / Tissues",
+		"dont_allow_transplantation":"No, I DO NOT allow a transplantation of any of my organs or tissues",
+		"yes_shall_not_decided_by_person":"Yes or No shall be decided by the following person:",
+		"right_management":"Rights Management",
+		"setup_who_can_see_upload_data":"Setup who can see your data and who can upload data to your profile",
+		"emergancy_access_for_hospital_doc":"Emergency access to my emergency files for hospital and doctors",
+		"specify_kind_of_right_management":"Please specify what kind of right management you prefer? ",
+		"automatically_hidden_content":"A new item is automatically HIDDEN to Doctors & Nurses in case of a regular profile access (PIN & ID) & must manually be made VISIBLE by me (SHOW ALWAYS or SHOW UNTIL A SPECIFIED DATE.)",
+		"automatically_visible_content":"A new item is automatically VISIBLE to Doctors & Nurses in case of a regular profile access (PIN & ID) & must manually be made INVISIBLE by me (HIDE ALWAYS or HIDE UNTIL A SPECIFIED DATE.)",
+		"Opt_Out":"Opt-Out",
+		"Opt_In":"Opt-Out",
+		"apply_right_management_for_all_items":"Apply a right managment setting of ALL Items",
+		"plz_mention_date_time":"Please mention the date-time for until",
+		"make_all_item_visible_now_untill":"Make all items VISIBLE now (Until changed) ",
+		"make_all_item_visible_untill":"Make all items VISIBLE until"
 	}
 
 }
