Language & functionality for diconnect devices

--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -691,6 +691,7 @@
 		"done": "Done",
 		"QR_code": "QR code",
 		"Change": "Change",
+		"visibility":"Visibility",
 		"edit_id_pin": "You can change your ID and PIN as many times as you want.",
 		"edit": "Edit",
 		"and": "and",
@@ -730,6 +731,7 @@
 		"insurance_added": "Insuranse added Successfully.",
 		"number": "number",
 		"Delete": "Delete",
+		"de_archive":"De-archive",
 		"password": "Password",
 		"supportive_text": "Supportive text like this can be added if needed.",
 		"Current": "Current",
@@ -797,6 +799,7 @@
 		"u_r_nvr_obligate_to_upload_doc": "You are never obligated to upload your license or any other proof of ID.",
 		"in_critical_enviroment_id": "In the critical environment it makes a unique identification and comparison to the existing helthcare data much easier, when you do. Also the deduction of healthcare services with your insurance company is much easier that way.",
 		"date": "Date",
+		"heart_rate":"Heart Rate",
 		"time": "Time",
 		"format": "format",
 		"set_the_default": "Set the default",
@@ -859,6 +862,8 @@
 		"cancel": "Cancel",
 		"what_ur_profession": "What is your profession",
 		"show": "Show",
+		"hide":"Hide",
+		"until":"Until",
 		"Week_or_more": "Week or more",
 		"today": "Today",
 		"yesterday": "Yesterday",
@@ -901,6 +906,55 @@
 		"data_srvcs":"Data Services",
 		"stay_upto_date_orgnize_data":"Stay up to date and let Aimedis organize your medical data",
 		"available":"Available",
-		"activate":"Activate"
+		"activate":"Activate",
+		"secnd_openion":"Second Opinion",
+		"doc_require_for_second_openion":"For Second Opinion request Doctor is required",
+		"specilist_and_secnd_openion":"Specialist and standard questions",
+		"how_wuld_u_like_rcv_scnd_openion":"How would you like to receive the Second Opinion",
+		"ur_profesion":"Your profession",
+		"attachments":"Attachments",
+		"rqst_sent_succefully":"Request sent Sucessfully",
+		"archive_journal":"Archive Journal",
+		"archive":"Archive",
+		"about":"About",
+		"specialist":"Specialist",
+		"previous":"Previous",
+		"next":"Next",
+		"journal":"Journal",
+		"add_new_entry":"Add new entry",
+		"entry":"entry",
+		"blood_pressure":"Blood Pressure",
+		"blood_sugar":"Blood Sugar",
+		"condition_pain":"Condition and Pain",
+		"covid_diary":"Covid-19 Diary",
+		"diagnosis":"Diagnosis",
+		"diary":"Diary",
+		"doc_visit":"Doctor Visit",
+		"family_anmnies":"Family Anamnesis",
+		"file_uplod":"Files Upload",
+		"hosp_visit":"Hospital Visit",
+		"lab_result":"Laboratory Result",
+		"marcumar_pass":"Marcumar pass",
+		"medication":"Medication",
+		"smoking_status":"Smoking Status",
+		"vaccination":"Vaccination",
+		"weight_bmi":"Weight & BMI",
+		"personalize_dashbrd":"Personalize dashboard",
+		"date_measure":"Date Measured",
+		"time_measure":"Time Measured",
+		"visible":"Visible",
+		"always":"Always",
+		"rr_systolic":"RR Systolic",
+		"feeling":"Feeling",
+		"RR_diastolic":"RR Diastolic",
+		"view_fullscren":"View in fullscreen",
+		"situation":"Situation",
+		"selct_pain_area":"Select Pain areas",
+		"pain_areas":"Pain areas",
+		"temparture":"Temparture",
+		"saturation":"saturation",
+		"Location":"location",
+		"pain_type":"Pain type",
+		"pain_quality":"Pain quality"
 	}
 }
