work for language jaurnal component

--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -687,6 +687,7 @@
 		"information": "Information",
 		"profile_info": "This is your profile information, which is accessible to your trusted Doctors and those you share your Profile ID nad PIN with.",
 		"ID": "ID",
+		"speciality":"Speciality",
 		"pin": "PIN",
 		"done": "Done",
 		"QR_code": "QR code",
@@ -928,7 +929,10 @@
 		"condition_pain":"Condition and Pain",
 		"covid_diary":"Covid-19 Diary",
 		"diagnosis":"Diagnosis",
+		"travel":"Travel",
+		"traveled":"Traveled",
 		"diary":"Diary",
+		"diary_note":"Diary Notes",
 		"doc_visit":"Doctor Visit",
 		"family_anmnies":"Family Anamnesis",
 		"file_uplod":"Files Upload",
@@ -944,6 +948,7 @@
 		"time_measure":"Time Measured",
 		"visible":"Visible",
 		"always":"Always",
+		"when":"When",
 		"rr_systolic":"RR Systolic",
 		"feeling":"Feeling",
 		"RR_diastolic":"RR Diastolic",
@@ -955,6 +960,46 @@
 		"saturation":"saturation",
 		"Location":"location",
 		"pain_type":"Pain type",
-		"pain_quality":"Pain quality"
+		"pain_quality":"Pain quality",
+		"slct_ICD_serch_code":"Select an ICD catalogue and search for code",
+		"enter_code_serch_by_keyword":"Enter code or search by keywords",
+		"dignose":"Diagnose",
+		"review":"Review",
+		"by":"by",
+		"emergency":"Emergency",
+		"diagnosed":"Diagnosed",
+		"allergy":"Allergy",
+		"date_doc_visit":"Date Dcotor Visit",
+		"day_doc_visit":"Doctor Day Visit",
+		"welcome":"Welcome",
+		"ur_helthcare_on_blockchain":"Your healthcare platform on the Blockchain",
+		"we_hv_prpared_short_introductry":"We’ve prepared a short introductory video which sums all the benefits",
+		"u_get_from_aimedis":"you get from using the Aimedis platform.",
+		"entry_example":"Entry example",
+		"journal_entry":"Journal entry",
+		"example":"Example",
+		"mild_depresive_episode":"Mild depressive episode",
+		"team":"Team",
+		"example_entry_of_journal_timline_etc":"This is an example entry on your journal timeline. All entries, such as “Diagnosis”, “Doctor visits”, “Laboratory results” and more, will appear here.",
+		"date_of_dieses_patient":"Date of disease onset (Patient)",
+		"date_of_death":"Date of Death (if applicable)",
+		"disease_name":"Disease Name",
+		"gender_of_relatives":"Gender of relative",
+		"relation_of_relative":"Relation with relative",
+		"all_time":"All time",
+		"type_2":"Type: (2)",
+		"doc_all":"Doctor: All",
+		"facility_all":"Facility: All",
+		"sort_by":"Sort by",
+		"clear_filter":"Clear filters",
+		"file_uploads":"File Uploads",
+		"hosp_name":"Hospital Name",
+		"hosp_id":"Hospital ID",
+		"doc_id":"Doctor ID",
+		"first_visit_day":"First Visit Day",
+		"last_visit_day":"Last Visit Day",
+		"save_entry":"Save entry",
+		"entry_time":"Entry time",
+		"dig_time":"Diagnosis time"
 	}
 }
