--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -690,6 +690,9 @@
 		"speciality":"Speciality",
 		"pin": "PIN",
 		"done": "Done",
+		"browse":"Browse",
+		"or_drag_here":"or drag here",
+		"suported_file_type":"Supported file types",
 		"QR_code": "QR code",
 		"Change": "Change",
 		"visibility":"Visibility",
@@ -942,6 +945,8 @@
 		"medication":"Medication",
 		"smoking_status":"Smoking Status",
 		"vaccination":"Vaccination",
+		"vaccinated_by":"Vaccinated by",
+		"date_of_vaccination":"Date of Vaccination",
 		"weight_bmi":"Weight & BMI",
 		"personalize_dashbrd":"Personalize dashboard",
 		"date_measure":"Date Measured",
@@ -949,6 +954,7 @@
 		"visible":"Visible",
 		"always":"Always",
 		"when":"When",
+		"from":"From",
 		"rr_systolic":"RR Systolic",
 		"feeling":"Feeling",
 		"RR_diastolic":"RR Diastolic",
@@ -1000,6 +1006,55 @@
 		"last_visit_day":"Last Visit Day",
 		"save_entry":"Save entry",
 		"entry_time":"Entry time",
-		"dig_time":"Diagnosis time"
+		"dig_time":"Diagnosis time",
+		"enter_value":"Enter Value",
+		"unit":"Unit",
+		"upr_limit":"Upper Limit",
+		"lwr_limit":"Lower Limit",
+		"lab_parameter":"Laboratory Parameter",
+		"value":"Value",
+		"enter_a_sbstnce":"Enter a substance",
+		"atc_code":"ATC Code",
+		"ur_trade_name":"Your Trade Name",
+		"enter_dosage":"Enter a dosage",
+		"prescribed":"Prescribed",
+		"specific_date":"Specific Date",
+		"interval":"Interval",
+		"to_be_consume":"To be comsumed at",
+		"reminder":"Reminder",
+		"reminder_time_taken":"Reminder time taken",
+		"notes":"Notes",
+		"ongoing":"ongoing",
+		"on_demand":"On Demand",
+		"dosage":"Dosage",
+		"time_taken":"Time Taken",
+		"quik_value":"Quick Value",
+		"INR":"INR",
+		"pill_taken":"Pills Taken",
+		"marcumer_pass":"Marcumar Pass",
+		"prsnalize_a_dashbord_drag_recorder":"Personalize your dashboard by adding or removing cards. Drag to reorder.",
+		"add_more_cards":"Add more cards",
+		"depression":"Depression",
+		"multiple_lesions_again_suggest":"Multiple lesions again suggest chronic demyelination. Mild atrophy greatest in the frontal region may be associated with multiple sclerosis. Findings appear stable when compared with the prior study. There is no abnormal enhancement.",
+		"add_profile":"Add profile",
+		"picture":"picture",
+		"cmplt_ur_profile":"Complete your profile",
+		"weight":"Weight",
+		"height":"Height",
+		"blood":"Blood",
+		"BMI":"BMI",
+		"no_data_avlbl":"No data available",
+		"last_doc_visit":"Last doctor visits",
+		"upcming_appointment":"Upcoming appointment",
+		"neurology":"Neurology",
+		"offc_visit":"Office visit",
+		"last_document":"Last Documents",
+		"view_all":"View all",
+		"temp_headech":"Temperature and headaches",
+		"open":"Open",
+		"date_of_dignose":"Date of diagnose",
+		"show_entry":"Show this entry",
+		"hide_entry":"Hide this entry",
+		"show_after":"Show after"
 	}
 }
