Fix for the updating image for prescription and sick certificate

--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -850,7 +850,7 @@
 		"sent": "Sent",
 		"on": "on",
 		"request": "request",
-		"Pending": "0Pending",
+		"Pending": "Pending",
 		"Rejected": "Rejected",
 		"Answered": "Answered",
 		"Cancelled": "Cancelled",
