--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -25,6 +25,8 @@
 		"AIM_BLOCKCHAIN_item": "AIM & BLOCKCHAIN",
 		"BLOG_item": "BLOG",
 		"login_item": "login",
+		"in":"in",
+		"we_r_showing_speciality":"We are showing you specialists near",
 		"START_NOW_item": "START NOW",
 		"LOGOUT_item": "LOGOUT",
 		"Aboutus_Item": "About us",
@@ -40,6 +42,9 @@
 		"QM_footerSubitem": "QM",
 		"Staff_footerSubitem": "Staff",
 		"ContactUs_footerSubitem": "Contact us",
+		"Contact":"Contact",
+		"latest_info":"Latest info",
+		"Services":"Services",
 		"Support_footerSubitem": "Support",
 		"AimedisToken_footerSubitem": "Aimedis Token",
 		"Covid_footerSubitem": "Covid-19",
@@ -322,6 +327,7 @@
 		"Aimedis_supports_fight": "Aimedis supports the fight against COVID-19.",
 		"For_questions_donot_hesitate": "For questions do not hesitate to contact us via",
 		"covid_or_use_our": "or use our",
+		"date_time":"Date & Time",
 		"covid_contact_form": "contact form",
 		"covid_Stay_safe_healthy": "Stay safe and healthy!",
 		"covid_AIMEDIS_ADVISES": "Aimedis ADVISES",
@@ -650,6 +656,7 @@
 		"Register_Passwordshould": "Password should contain at least:",
 		"Register_characters": "8 characters",
 		"Register_letter": "1 letter",
+		"forget_pass":"Forgot Password",
 		"Register_number": "1 number",
 		"Register_special": "1 special character",
 		"recruitmentemp_content": "recruitment employees",
@@ -723,6 +730,8 @@
 		"mobile_number": "Mobile phone number",
 		"mobile": "mobile",
 		"Languages": "Languages",
+		"Language":"Language",
+		"dark_mode":"Dark mode",
 		"spoken": "spoken",
 		"insurance": "Insurance",
 		"add_more": "Add more",
@@ -769,6 +778,8 @@
 		"recmonded_doc": "Recommended Doctors",
 		"doc_who_part_of_aimedis": "Doctors who are part of the Aimedis platform.",
 		"free_text": "Free Text",
+		"forget_password":"Forget Password",
+		"plz_enter_valid_email":"Please Enter Valid Email",
 		"format_updated": "The Format is updated",
 		"blockchain_secure_organ_donar_Pass": "Blockchain secured organ donor pass",
 		"easily_select_donar": "Here you can easily select to be an organ donor or not at anytime.",
@@ -874,11 +885,15 @@
 		"ago": "ago",
 		"trackers": "Trackers",
 		"self_data": "Self Data",
+		"more":"More",
 		"connect": "Connect",
 		"devices": "Devices",
 		"services": "Services",
 		"search_for_device_palce": "Search for device or service name...",
 		"view_details": "View Details",
+		"Details":"Details",
+		"Questions":"Questions",
+		"book":"Book",
 		"logout": "Logout",
 		"view_data": "View data",
 		"disconect_device": "Disconnect device",
@@ -896,6 +911,7 @@
 		"ur_connected_device_appear":"Your connected devices will appear here",
 		"connct_a_device":"Connect a device",
 		"blockchain_access_log":"Blockchain Access Log",
+		"profile_setting":"Profile Settings",
 		"log_type":"Log type",
 		"created_by":"Created by",
 		"time_created":"Time created",
@@ -912,6 +928,10 @@
 		"available":"Available",
 		"activate":"Activate",
 		"secnd_openion":"Second Opinion",
+		"emrgancy_patient_data":"Emergency Patient Data",
+		"online_course":"Online Courses",
+		"extra_srvc":"Extra Services",
+		"jrnl_archive":"Journal Archive",
 		"doc_require_for_second_openion":"For Second Opinion request Doctor is required",
 		"specilist_and_secnd_openion":"Specialist and standard questions",
 		"how_wuld_u_like_rcv_scnd_openion":"How would you like to receive the Second Opinion",
@@ -925,6 +945,7 @@
 		"previous":"Previous",
 		"next":"Next",
 		"journal":"Journal",
+		"vdo_calls":"Videocalls",
 		"add_new_entry":"Add new entry",
 		"entry":"entry",
 		"blood_pressure":"Blood Pressure",
@@ -1047,7 +1068,8 @@
 		"last_doc_visit":"Last doctor visits",
 		"upcming_appointment":"Upcoming appointment",
 		"neurology":"Neurology",
-		"offc_visit":"Office visit",
+		"Office":"Office",
+		"Video":"Video",
 		"last_document":"Last Documents",
 		"view_all":"View all",
 		"temp_headech":"Temperature and headaches",
@@ -1055,6 +1077,53 @@
 		"date_of_dignose":"Date of diagnose",
 		"show_entry":"Show this entry",
 		"hide_entry":"Hide this entry",
-		"show_after":"Show after"
+		"show_after":"Show after",
+		"slct_time_slot":"Select time slot",
+		"holiday":"Holiday",
+		"appointment_booked":"Appointment booked successfully",
+		"upcming_apointment":"Upcoming appointments",
+		"office_visit":"Office visit",
+		"cancel_apointmnt":"Cancel appointment",
+		"show_past_apointment":"Show past appointments",
+		"plz_write_short_explnation":"Please write a short explanation of why you have to cancel the appointment. Thank you.",
+		"short_msg":"Short message",
+		"appointments":"Appointments",
+		"arrng_apointmnt":"Arrange an appointment",
+		"sync_ur_calander":"Sync to your calendar",
+		"search_within":"Search within",
+		"range":"range",
+		"see_avlbl_date":"SEE AVAILABLE DATES FOR",
+		"vdo_call":"Video call",
+		"consultancy_cstm_calnder":"Consultancy (custom calendar)",
+		"location_of_srvc":"Location of service",
+		"find_apointment":"Find Appointment",
+		"allow_location_access":"Allow location access",
+		"this_way_can_instntly_list_of_specility":"This way we can instantly show you a list of specialists.",
+		"for_geting_emrgancy_data_on_a_click":"For getting the Emergency Data of a patient Click on the Button",
+		"emrgncy_data_access":"Emergency Data Access",
+		"emrgancy_access_for_non_connected":"Emergency access for non-connected patient",
+		"plz_accept_term_condition":"Please Accept the term and condition",
+		"imp_notice_b":"IMPORTANT NOTICE",
+		"this_will_trigger_following_action":"This will trigger the following actions",
+		"send_email_to_patient_emrgancy":"send email to patient and emergency contact",
+		"snd_sms_to_patient_emrgancy":"send SMS to patient and emergency contact",
+		"snd_push_notification_to_patient_emrgancy":"send push notification to patient and emergency contact",
+		"I_hrwith_cnfirm_that_i_need_access_patient":"I herewith confirm that I need to access the patient's data due to a medical emergency situation the patient will be informed about that",
+		"time_format":"Time format",
+		"date_format":"Date format",
+		"view_emrgncy_data":"View Emergency Data",
+		"my_profile":"My Profile",
+		"male":"Male",
+		"female":"Female",
+		"other":"Other",
+		"change_password":"Change password",
+		"all_course":"All Courses",
+		"my_course":"My Courses",
+		"new_course":"New Courses",
+		"topic_all":"Topic: All",
+		"language_eng":"Language: English",
+		"what_diabetes":"What is Diabetes",
+		"add_to_cart":"Add to cart",
+		"here_u_see_diabetes":"Here you see what diabetes is, how it comes to diabetes and why a good treatment is so crucial."
 	}
 }
