your profession issue

--- a/src/translations/en_json_proofread_13072020.json
+++ b/src/translations/en_json_proofread_13072020.json
@@ -846,7 +846,7 @@
 		"it_is_known_dieseas": "Is it a known disease",
 		"r_u_tracking_medi": "Are you taking any medication",
 		"do_u_hv_allergies": "Do you have any allergies",
-		"ur_profession": "do_u_hv_allergies",
+		"ur_profession": "Your Profession",
 		"Annotations": "Annotations",
 		"details": "details",
 		"questions": "questions",
